[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Images/KillerBlock.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Blocks/KillerBlock.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/SFX/HitKillerBlock.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 5, 4 )

[sub_resource type="Curve" id=50]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=43]
curve = SubResource( 50 )

[sub_resource type="ParticlesMaterial" id=51]
lifetime_randomness = 1.0
flag_disable_z = true
gravity = Vector3( 0, -200, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 43 )
color = Color( 1, 0, 0, 1 )

[node name="KillerBlock" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 48 )
frame = 3
playing = true

[node name="BlockBody" type="StaticBody2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="BlockBody"]
position = Vector2( -1, 0 )
shape = SubResource( 49 )

[node name="DestroyParticles" type="Particles2D" parent="."]
position = Vector2( 12, 0 )
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
process_material = SubResource( 51 )

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true

[node name="DestroySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
